modificacion de productos

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
     <section id="productos">
         <h1>Productos</h1>
+        <p>Trabajamos con productos de primera marca como <strong>Totem, Direth</strong>y también con segundas marcas como <strong>Newood</strong></p>
+        <h3>Todos los productos mostrados se encuentran en stock</h3>
         <div class="imgProdcutos">
             <img class="produ1" src="img/logo-amarillo.png" alt="" width="120px">
             <img class="produ2" src="img/logo-amarillo.png" alt="" width="120px">
