--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
 
     <section id="nosotros">
         <h1>Nosotros</h1>
+        <h2>Empresa familiar con mas de 40 años de historia</h2>
+        <p>Maderera Rosati nació en el año 1981 en un pequeño lote ubicado en la esquina de Av. Mitre y esquina 22, en el municipio de Berazategui. En los últimos años nos hemos consolidado en el mercado local y somos uno de los proveedores de madera más reconocidos de zona sur. Más de 40 años al servicio de nuestros clientes y de la construcción.</p>
     </section>
     
 </body>
