--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     <section>
         <h1 id="pisos">Renova tu casa</h1>
         <h2 class="tiposDePisos">Pisos flotantes, pisos vinilicos, pisos porcelanatos</h2>
+        <marquee behavior="scroll" direction="right">FÁCIL - RAPIDO - SIN ROMPER</marquee>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque dolor alias expedita, fuga odio illo ut
             quibusdam repellendus pariatur delectus, tempora iusto ratione iste sed repudiandae soluta magnam sunt.</p>
         <h2 class="piso-vinilico">
